*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17207 72102866-910b-0410-8b05-ffd578937521

--- a/Utilities/thumbnailer/ImageThumbnailer/GNUmakefile
+++ b/Utilities/thumbnailer/ImageThumbnailer/GNUmakefile
@@ -1,6 +1,8 @@
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
+GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+
 BUNDLE_NAME = ImageThumbnailer
 BUNDLE_EXTENSION = .thumb
 
