*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17233 72102866-910b-0410-8b05-ffd578937521

--- a/Utilities/GNUmakefile
+++ b/Utilities/GNUmakefile
@@ -7,8 +7,7 @@ ifneq ($(FOUNDATION_LIB), apple)
        wopen 
 else
   SUBPROJECTS = \
-       findfile \
-       thumbnailer
+       findfile 
 endif
 
 -include GNUmakefile.preamble
