*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17726 72102866-910b-0410-8b05-ffd578937521

--- a/GWRemote/GWRemote/GNUmakefile
+++ b/GWRemote/GWRemote/GNUmakefile
@@ -39,6 +39,7 @@ GWRemote_LOCALIZED_RESOURCE_FILES = Localizable.strings \
 
 GWRemote_OBJC_FILES = main.m \
                       Functions.m \
+                      externs.m \
                       GWRemote.m \
                       Viewer/ViewerWindow.m \
                       Viewer/GWSplitView.m \
