*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17743 72102866-910b-0410-8b05-ffd578937521

--- a/GWLib/GNUmakefile.in
+++ b/GWLib/GNUmakefile.in
@@ -32,6 +32,7 @@ ifeq ($(FOUNDATION_LIB), apple)
                            BCell.m \
                            BIcon.m \
                            BIconLabel.m \
+                           FSWatcher.m \
                            BNameEditor.m \
                            OSXCompatibility.m
 else
@@ -44,6 +45,7 @@ else
                            BCell.m \
                            BIcon.m \
                            BIconLabel.m \
+                           FSWatcher.m \
                            BNameEditor.m 
 endif
 
