2003-10-07 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/TShelf/TShelfPBIcon.h GWorkspace/TShelf/TShelfPBIcon.m
    New files.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17792 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -146,6 +146,7 @@ ifneq ($(FOUNDATION_LIB), apple)
   TShelf/TShelfViewItem.m \
   TShelf/TShelfIconsView.m \
   TShelf/TShelfIcon.m \
+  TShelf/TShelfPBIcon.m \
   Inspectors/InspectorsController.m \
   Inspectors/Attributes.m \
   Inspectors/Contents.m \
@@ -192,6 +193,7 @@ else
   TShelf/TShelfViewItem.m \
   TShelf/TShelfIconsView.m \
   TShelf/TShelfIcon.m \
+  TShelf/TShelfPBIcon.m \
   Inspectors/InspectorsController.m \
   Inspectors/Attributes.m \
   Inspectors/Contents.m \
