2003-10-10 Enrico Sersale  <enrico@imago.ro>
  * ContentViewers/PasteboardViewer
    New contents viewer inspector.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17813 72102866-910b-0410-8b05-ffd578937521

--- a/ContentViewers/GNUmakefile
+++ b/ContentViewers/GNUmakefile
@@ -11,8 +11,9 @@ SUBPROJECTS = \
   RtfViewer \
   PlistViewer \
   StringsViewer \
+  PdfViewer \
+  PasteboardViewer \
   InspectorViewer \
-  PdfViewer 
 else
 SUBPROJECTS = \
   FolderViewer \
@@ -22,7 +23,8 @@ SUBPROJECTS = \
   RtfViewer \
   PlistViewer \
   StringsViewer \
-  InspectorViewer
+  PasteboardViewer \
+  InspectorViewer 
 endif
 
 -include GNUmakefile.preamble
