2003-10-10 Enrico Sersale  <enrico@imago.ro>
  * ContentViewers/PasteboardViewer/PasteboardViewer.m
    Enabled. Actually it works with many Gorm objects.
    Problems with: NSBrowser, NSTableView, NSOutlineView and NSPopUpMenu.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17826 72102866-910b-0410-8b05-ffd578937521

--- a/ContentViewers/GNUmakefile
+++ b/ContentViewers/GNUmakefile
@@ -11,9 +11,9 @@ SUBPROJECTS = \
   RtfViewer \
   PlistViewer \
   StringsViewer \
-  PdfViewer \
-  PasteboardViewer \
   InspectorViewer \
+  PdfViewer \
+  PasteboardViewer 
 else
 SUBPROJECTS = \
   FolderViewer \
@@ -23,8 +23,8 @@ SUBPROJECTS = \
   RtfViewer \
   PlistViewer \
   StringsViewer \
-  PasteboardViewer \
-  InspectorViewer 
+  InspectorViewer \
+  PasteboardViewer 
 endif
 
 -include GNUmakefile.preamble
