--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -7,7 +7,9 @@ include gworkspace.make
 PACKAGE_NAME = @PACKAGE_NAME@
 VERSION = @PACKAGE_VERSION@
 
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+ifeq ($(FOUNDATION_LIB), gnu)
+  GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+endif
 
 ifeq ($(FOUNDATION_LIB), apple)
   GNUSTEP_INSTALLATION_DIR = /
