2003-10-16 Enrico Sersale  <enrico@imago.ro>
  * Utilities/thumbnailer/thumbnailerInfo.plist
    moved "Make thumbnail(s)" and "Remove thumbnail(s)" in a submenu.
    they are now "Thumbnails/Make thumbnail(s)" and "Thumbnails/Remove thumbnail(s)".
    German translation by Martin Brecher <martin@mb-itconsulting.com>.

  * GWorkspace/Resources/German.lproj
    updated German Localized.strings (by Martin Brecher <martin@mb-itconsulting.com>)

  * ContentViewers/AppViewer/AppViewer.m
    shows also the extensions.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17900 72102866-910b-0410-8b05-ffd578937521

--- a/Utilities/thumbnailer/thumbnailerInfo.plist
+++ b/Utilities/thumbnailer/thumbnailerInfo.plist
@@ -4,9 +4,10 @@
       NSMessage = makeThumbnail;
       NSSendTypes=(NSFilenamesPboardType);
       NSMenuItem = { 
-	      default = "Make thumbnail(s)";
-	      English = "Make thumbnail(s)";
-	      Italian = "Crea thumbnail";
+	      default = "Thumbnails/Make thumbnail(s)";
+	      English = "Thumbnails/Make thumbnail(s)";
+	      Italian = "Thumbnails/Crea thumbnail";
+              German =  "Thumbnails/Thumbnail(s) anlegen";
       };
     },
     {
@@ -14,9 +15,10 @@
       NSMessage = removeThumbnail;
       NSSendTypes=(NSFilenamesPboardType);
       NSMenuItem = { 
-	      default = "Remove thumbnail(s)";
-	      English = "Remove thumbnail(s)";
-	      Italian = "Rimuovi thumbnail";
+	      default = "Thumbnails/Remove thumbnail(s)";
+	      English = "Thumbnails/Remove thumbnail(s)";
+	      Italian = "Thumbnails/Rimuovi thumbnail";
+              German  = "Thumbnails/Thumbnail(s) entfernen";
       };
     },
     {
