*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17965 72102866-910b-0410-8b05-ffd578937521

--- a/Utilities/thumbnailer/GNUmakefile
+++ b/Utilities/thumbnailer/GNUmakefile
@@ -23,6 +23,7 @@ thumbnailer_RESOURCE_FILES = ImageThumbnailer/ImageThumbnailer.thumb
 
 include $(GNUSTEP_MAKEFILES)/tool.make
 include $(GNUSTEP_MAKEFILES)/service.make
+include $(GNUSTEP_MAKEFILES)/bundle.make
 include $(GNUSTEP_MAKEFILES)/aggregate.make
 
 -include GNUmakefile.local.service
