*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18519 72102866-910b-0410-8b05-ffd578937521

--- a/Utilities/GNUmakefile
+++ b/Utilities/GNUmakefile
@@ -2,6 +2,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 ifneq ($(FOUNDATION_LIB), apple)
   SUBPROJECTS = \
+       fswatcher \
        findfile \
        thumbnailer \
        wopen 
