*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18531 72102866-910b-0410-8b05-ffd578937521

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,11 @@
 AC_PREREQ(2.52)
 AC_INIT([GWorkspace], [0.6.3], [enrico@imago.ro])
 
+
+if test -z "$GNUSTEP_SYSTEM_ROOT"; then
+  AC_MSG_ERROR([You must run the GNUstep initialization script first!])
+fi
+
 #--------------------------------------------------------------------
 # Use config.guess, config.sub and install-sh provided by gnustep-make
 #--------------------------------------------------------------------
