--- a/Utilities/fswatcher/GNUmakefile
+++ b/Utilities/fswatcher/GNUmakefile
@@ -1,6 +1,10 @@
 
 GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
+ifeq ($(FOUNDATION_LIB), apple)
+  GNUSTEP_INSTALLATION_DIR = /
+endif
+
 include $(GNUSTEP_MAKEFILES)/common.make
 
 # The application to be compiled
