*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18631 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -19,6 +19,7 @@ endif
 # subprojects
 #
 SUBPROJECTS = Utilities \
+	      			  Inspector \
 	      			  GWLib \
 	      			  Viewers \
 	      			  ContentViewers \
