*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18660 72102866-910b-0410-8b05-ffd578937521

--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -76,12 +76,14 @@ ifneq ($(FOUNDATION_LIB), apple)
   Inspector_OBJC_FILES = main.m \
                          Functions.m \
                          Inspector.m \
+                         Contents.m \
                          Preferences/InspectorPref.m \
                          Dialogs/StartAppWin.m
 else
   Inspector_OBJC_FILES = main.m \
                          Functions.m \
                          Inspector.m \
+                         Contents.m \
                          Preferences/InspectorPref.m \
                          Dialogs/StartAppWin.m
                          
