--- a/Inspector/InspectorInfo.plist.in
+++ b/Inspector/InspectorInfo.plist.in
@@ -1,14 +1,14 @@
 {
-    NSIcon = "MagnifyGlas.tiff";
+    NSIcon = "Inspector.tiff";
     NSRole = "NSNone";
     ApplicationDescription = "Inspector";
-    ApplicationIcon = "FileManager.tiff";
+    ApplicationIcon = "Inspector.tiff";
     ApplicationName = "@PACKAGE_NAME@";
     ApplicationRelease = "@PACKAGE_VERSION@";
   NSTypes = (
     {
       NSUnixExtensions = ( "inspector" );
-      NSIcon = "MagnifyGlas.tiff";
+      NSIcon = "Magnify.tiff";
     }    
   );
 }
