--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -59,13 +59,15 @@ Inspector_LANGUAGES = Resources/English
 ifeq ($(FOUNDATION_LIB), apple)
   Inspector_LOCALIZED_RESOURCE_FILES = Localizable.strings \
                                         MainMenu.nib \
-                                        Inspector.nib \ 
+                                       InspectorWin.gorm \
+                                        Contents.nib \ 
                                         PreferencesWin.nib \
                                         StartAppWin.nib 
                                         
 else 
   Inspector_LOCALIZED_RESOURCE_FILES = Localizable.strings \
-                                       Inspector.gorm \
+                                       InspectorWin.gorm \
+                                       Contents.gorm \
                                      PreferencesWin.gorm \
                                      StartAppWin.gorm 
 endif
