*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18670 72102866-910b-0410-8b05-ffd578937521

--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -30,6 +30,7 @@ ifneq ($(PDFKIT), 0)
   Inspector_RESOURCE_FILES = \
     Resources/Images/* \
     Resources/English.lproj \
+    ContentViewers/FolderViewer/FolderViewer.inspector \
     ContentViewers/ImageViewer/ImageViewer.inspector \
     ContentViewers/SoundViewer/SoundViewer.inspector \
     ContentViewers/AppViewer/AppViewer.inspector \
@@ -43,6 +44,7 @@ else
   Inspector_RESOURCE_FILES = \
     Resources/Images/* \
     Resources/English.lproj \
+    ContentViewers/FolderViewer/FolderViewer.inspector \
     ContentViewers/ImageViewer/ImageViewer.inspector \
     ContentViewers/SoundViewer/SoundViewer.inspector \
     ContentViewers/AppViewer/AppViewer.inspector \
