*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18678 72102866-910b-0410-8b05-ffd578937521

--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -63,6 +63,7 @@ ifeq ($(FOUNDATION_LIB), apple)
                                         MainMenu.nib \
                                        InspectorWin.gorm \
                                         Contents.nib \ 
+                                        Attributes.nib \ 
                                         PreferencesWin.nib \
                                         StartAppWin.nib 
                                         
@@ -70,6 +71,7 @@ else
   Inspector_LOCALIZED_RESOURCE_FILES = Localizable.strings \
                                        InspectorWin.gorm \
                                        Contents.gorm \
+                                       Attributes.gorm \
                                      PreferencesWin.gorm \
                                      StartAppWin.gorm 
 endif
@@ -81,6 +83,8 @@ ifneq ($(FOUNDATION_LIB), apple)
                          Functions.m \
                          Inspector.m \
                          Contents.m \
+                         Attributes.m \
+                         TimeDateView.m \
                          Preferences/InspectorPref.m \
                          Dialogs/StartAppWin.m
 else
@@ -88,6 +92,8 @@ else
                          Functions.m \
                          Inspector.m \
                          Contents.m \
+                         Attributes.m \
+                         TimeDateView.m \                         
                          Preferences/InspectorPref.m \
                          Dialogs/StartAppWin.m
                          
