*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18801 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -20,6 +20,7 @@ endif
 #
 SUBPROJECTS = Utilities \
 	      			  Inspector \
+	      			  Operation \
 	      			  GWLib \
 	      			  Viewers \
 	      			  GWorkspace 
