*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18982 72102866-910b-0410-8b05-ffd578937521

--- a/Inspector/ContentViewers/GNUmakefile
+++ b/Inspector/ContentViewers/GNUmakefile
@@ -2,7 +2,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 include ../inspector.make
 
-ifneq ($(PDFKIT), 0)
+ifneq ($(PDFKIT),no)
 SUBPROJECTS = \
   FolderViewer \
   ImageViewer \
