*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19091 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -21,6 +21,8 @@ endif
 SUBPROJECTS = Utilities \
 	      			  Inspector \
 	      			  Operation \
+                FSNode \
+                Finder \
 	      			  GWLib \
 	      			  Viewers \
 	      			  GWorkspace 
