--- a/FSNode/GNUmakefile
+++ b/FSNode/GNUmakefile
@@ -1,6 +1,8 @@
 
 GNUSTEP_MAKEFILES = $(GNUSTEP_SYSTEM_ROOT)/Makefiles
 
+GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+
 include $(GNUSTEP_MAKEFILES)/common.make
 include Version
 
