*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19351 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -23,6 +23,7 @@ SUBPROJECTS = Utilities \
 	      			  Operation \
                 FSNode \
                 Finder \
+	      			  Desktop \
 	      			  GWLib \
 	      			  Viewers \
 	      			  GWorkspace 
