*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19463 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -18,10 +18,10 @@ endif
 #
 # subprojects
 #
-SUBPROJECTS = Utilities \
+SUBPROJECTS = FSNode \
+	      			  Utilities \
 	      			  Inspector \
 	      			  Operation \
-                FSNode \
                 Finder \
 	      			  Desktop \
 	      			  GWLib \
