*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19478 72102866-910b-0410-8b05-ffd578937521

--- a/FSNode/GNUmakefile
+++ b/FSNode/GNUmakefile
@@ -36,8 +36,12 @@ FSNode_LANGUAGES = Resources/English
 
 #FSNode_LOCALIZED_RESOURCE_FILES = Localizable.strings  
 
+SUBPROJECTS = ExtendedInfo 
+
 -include GNUmakefile.preamble
 
 include $(GNUSTEP_MAKEFILES)/framework.make
+
+include $(GNUSTEP_MAKEFILES)/aggregate.make
 
 -include GNUmakefile.postamble
