*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19523 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -24,6 +24,7 @@ SUBPROJECTS = FSNode \
 	      			  Operation \
                 Finder \
 	      			  Desktop \
+	      			  Recycler \
 	      			  GWLib \
 	      			  Viewers \
 	      			  GWorkspace 
