--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -59,6 +59,8 @@ ifneq ($(FOUNDATION_LIB), apple)
   IconViewsIcon.m \
   GWSplitView.m \
   ViewersWindow.m \
+  GWSpatialViewer.m \
+  GWViewersManager.m \
   Shelf/Shelf.m \
   Shelf/ShelfIcon.m \
   TShelf/TShelfWin.m \
