*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19577 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -49,8 +49,8 @@ GWorkspace.m \
 IconViewsIcon.m \
 GWSplitView.m \
 ViewersWindow.m \
-GWSpatialViewer.m \
-GWViewersManager.m \
+SpatialViewer/GWSpatialViewer.m \
+SpatialViewer/GWViewersManager.m \
 Shelf/Shelf.m \
 Shelf/ShelfIcon.m \
 TShelf/TShelfWin.m \
