--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -52,6 +52,7 @@ ViewersWindow.m \
 SpatialViewer/GWViewersManager.m \
 SpatialViewer/GWSpatialViewer.m \
 SpatialViewer/GWSVIconsView.m \
+SpatialViewer/GWSVPathsPopUp.m \
 Shelf/Shelf.m \
 Shelf/ShelfIcon.m \
 TShelf/TShelfWin.m \
