*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19619 72102866-910b-0410-8b05-ffd578937521

--- a/Finder/GNUmakefile
+++ b/Finder/GNUmakefile
@@ -31,6 +31,7 @@ Finder_OBJC_FILES = main.m \
                  SearchPlacesMatrix.m \
                  SearchResults/SearchResults.m \
                  SearchResults/ResultsTableView.m \
+                 SearchResults/ResultsTextCell.m \
                  SearchResults/ResultsPathsView.m \
                  Functions.m 
 
