*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19846 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -49,16 +49,16 @@ GWorkspace.m \
 IconViewsIcon.m \
 GWSplitView.m \
 ViewersWindow.m \
-Viewer/GWViewer.m \
-Viewer/GWViewerWindow.m \
-Viewer/GWViewerSplit.m \
-Viewer/GWViewerIconsPath.m \
-Viewer/GWViewerShelf.m \
-SpatialViewer/GWViewersManager.m \
-SpatialViewer/GWSpatialViewer.m \
-SpatialViewer/GWSVIconsView.m \
-SpatialViewer/GWSVBrowser.m \
-SpatialViewer/GWSVPathsPopUp.m \
+FileViewer/GWViewersManager.m \
+FileViewer/GWViewer.m \
+FileViewer/GWSpatialViewer.m \
+FileViewer/GWViewerWindow.m \
+FileViewer/GWViewerBrowser.m \
+FileViewer/GWViewerIconsView.m \
+FileViewer/GWViewerShelf.m \
+FileViewer/GWViewerSplit.m \
+FileViewer/GWViewerIconsPath.m \
+FileViewer/GWViewerPathsPopUp.m \
 Shelf/Shelf.m \
 Shelf/ShelfIcon.m \
 TShelf/TShelfWin.m \
